--- a/src/template.html
+++ b/src/template.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>simple-starter</title>
+    <title>genuary2022.8</title>
 
     <!--
     <link href="style.css" rel="stylesheet" type="text/css"/>
@@ -18,6 +18,6 @@
     </p>
 </canvas>
 <div id="ui"></div>
-<a class="github" href="https://github.com/fforw/simple-starter">github</a>
+<a class="github" href="https://github.com/fforw/genuary2022.8">github</a>
 </body>
 </html>
