--- a/src/template.html
+++ b/src/template.html
@@ -17,6 +17,7 @@
         Your browser has no support for canvas elements.
     </p>
 </canvas>
+<img id="logo" class="hidden" src="media/logo.png" alt="">
 <div id="ui"></div>
 <a class="github" href="https://github.com/fforw/genuary2022.8">github</a>
 </body>
